--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,23 +5,43 @@
 
 * {
     font-family: "LXGW";
-    font-size: 18px;
+    font-size: 20px;
 }
-
 button {
     width: 150px;
     height: 40px;
+    background-color: transparent;
+    border-width: 2px;
+    border-color: #555;
+    border-radius: 5px;
+    padding: 2px;
+    margin: 5px;
     text-align: center;
+    transition-duration: 0.2s;
+}
+button:hover {
+    background-color: #777;
+    color: white;
+    cursor: pointer;
 }
 
 h1 {
     color: #0099ff;
+    text-align: center;
+    font-size: 40px;
+}
+h2 {
+    font-size: 24px;
 }
 
 .flex_container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+.centered {
+    text-align: center;
 }
 
 /* lavalamp navigation bar */
@@ -34,7 +54,7 @@ h1 {
 }
 #navList > li {
     color: rgb(45, 42, 255);
-    font-size: 20px;
+    font-size: 22px;
     display: inline-block;
     padding: 10px 20px;
 }
@@ -47,19 +67,20 @@ h1 {
 }
 
 /* myholo page */
-#my_photo {
+.Avators {
     width: 150px;
+    margin: 10px 30px;
 }
 .Player_info {
     font-weight: bold;
 }
-#my_abilities {
+.my_abilities {
     margin: 20px 0;
     border: 2px solid #000;
     border-collapse: collapse;
-    font-size: 20px;
+    font-size: 22px;
 }
-#my_abilities th, #my_abilities td {
+.my_abilities th, .my_abilities td {
     text-align: left;
     padding: 10px;
     width: 150px;
@@ -68,12 +89,61 @@ h1 {
 #my_streams {
     margin: 5px;
 }
-#my_streams th, #my_streams td {
+#my_streams th,
+#my_streams td {
     padding: 2px 5px;
 }
 #my_streams tr:hover {
     background-color: #CCC;
     cursor: pointer;
+}
+
+/* level challenge page */
+.infobox {
+    margin: 20px 20px;
+    border: 1px solid #000;
+    border-collapse: collapse;
+}
+.infobox th,
+.infobox td {
+    text-align: center;
+    padding: 5px;
+    width: 130px;
+    border: 1px solid #000
+}
+#boss_match_result_list {
+    width: 600px;
+    border-top: 1px solid #000;
+    padding: 20px 50px 0 50px;
+}
+#boss_match_result_list li {
+    margin: 10px;
+}
+#boss_match_result_summary {
+    width: 600px;
+    list-style: none;
+}
+#boss_match_result_summary li {
+    margin: 10px;
+}
+
+/* respawn page */
+button.button_min,
+button.button_add {
+    width: 40px;
+    height: 40px;
+    border: none;
+    font-size: 26px;
+}
+button.button_add:hover {
+    background-color: transparent;
+    color: rgb(32, 255, 32);
+    border-radius: 20px;
+}
+button.button_min:hover {
+    background-color: transparent;
+    color: rgb(255, 32, 88);
+    border-radius: 20px;
 }
 
 /* dev tool */
