--- a/src/css/level.css
+++ b/src/css/level.css
@@ -16,18 +16,18 @@
     width: 110px;
 }
 
-#boss_match_result_list {
+.match_result_list {
     width: 600px;
     border-top: 1px solid #000;
     padding: 20px 50px 0 50px;
 }
-#boss_match_result_list li {
+.match_result_list li {
     margin: 10px;
 }
-#boss_match_result_summary {
+.match_result_summary {
     width: 600px;
     list-style: none;
 }
-#boss_match_result_summary li {
+.match_result_summary li {
     margin: 10px;
 }
