--- a/src/css/level.css
+++ b/src/css/level.css
@@ -18,8 +18,8 @@
 
 .match_result_list {
     width: 600px;
-    border-top: 1px solid #000;
-    padding: 20px 50px 0 50px;
+    /* border-top: 1px solid #000; */
+    padding: 0 50px;
 }
 .match_result_list li {
     margin: 10px;
