--- a/src/css/index.css
+++ b/src/css/index.css
@@ -25,7 +25,8 @@ button:hover {
     cursor: pointer;
 }
 
-h1 {
+h1,
+h1 span {
     color: #0099ff;
     text-align: center;
     font-size: 40px;
@@ -71,4 +72,11 @@ h2 {
 }
 #navList > li:hover {
     cursor: pointer;
+}
+
+#dead_banner {
+    background-color: #ffb9b9;
+    color: red;
+    font-size: 24px;
+    padding: 10px;
 }
