finish game progress saving. finish match records reading/writing

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -80,3 +80,11 @@ h2 {
     font-size: 24px;
     padding: 10px;
 }
+
+.app_version {
+    color: inherit;
+    font-size: inherit;
+}
+.app_version::after {
+    content: "v1.0";
+}
