--- a/src/css/respawn.css
+++ b/src/css/respawn.css
@@ -27,8 +27,10 @@
     margin: auto auto;
 }
 
-/* .candidate_selected,
+/*
+.candidate_selected,
 .candidate_selected:hover {
     border: 2px solid rgb(104, 104, 104);
     border-radius: 10px;
-} */
+}
+*/
