--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,3 +1,11 @@
+#pg_home_container button {
+    width: 180px;
+    height: 50px;
+    font-size: 20px;
+    display: block;
+    margin: 20px auto;
+}
+
 #popup {
     position: fixed;
     top: 120px;
