--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,10 +1,3 @@
-body {
-    transition: 0.5s;
-}
-body.dimmed {
-    opacity: 50%;
-}
-
 #popup {
     position: fixed;
     top: 120px;
@@ -23,4 +16,16 @@ body.dimmed {
     opacity: 0%;
     visibility: hidden;
     transform: translateY(-60px);
+}
+
+#popup_block {
+    position: fixed;
+    z-index: 98;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    background-color: white;
+    opacity: 30%;
 }
